tests/setup/environment/docker-compose.blockchain.ci.yml
version: '3.4'

services:
  cere-chain:
    platform: linux/amd64
    container_name: cere-chain
    image: 'cerebellumnetwork/pos-node:v8.4.0-rc2'
    command: bash -c "/usr/local/bin/cere --dev --alice --rpc-external"
    ports:
      - '9944:9944'
