tests/setup/environment/docker-compose.blockchain.yml
version: '3.4'

services:
  cere-chain:
    platform: linux/amd64
    container_name: cere-chain
    image: 'cerebellumnetwork/pos-node:v7.3.12'
    command: bash -c "/usr/local/bin/cere --dev --alice --base-path ./data --rpc-external"
    ports:
      - '9944:9944'
    volumes:
      - ${BC_CAHCHE_DIR}:/data
