tests/setup/environment/envoy-grpc.yaml
static_resources:
    listeners:
        - name: storage-node-1
          address:
              socket_address: {address: 0.0.0.0, port_value: 8071}
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ['*']
                                    routes:
                                        - match: {prefix: '/'}
                                          route: {cluster: storage-node}
                          http_filters:
                              - name: envoy.grpc_web
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                              - name: envoy.filters.http.router
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: storage-node
          connect_timeout: 0.25s
          type: LOGICAL_DNS
          http2_protocol_options: {}
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: storage-node
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: ddc-storage-node-1
                                      port_value: 9091
